[project]
name = "langgraph-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dashscope>=1.24.6",
    "langchain-community>=0.3.29",
    "langchain-deepseek>=0.1.4",
    "langchain-openai>=0.3.33",
    "langchain-tavily>=0.2.11",
    "langchain-text-splitters>=0.3.11",
    "langgraph>=0.6.7",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "python-dotenv>=1.1.1",
]
